--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon task3-3.js"
   },
   "author": "Nemanja Kostovski",
   "license": "ISC",
   "devDependencies": {
+    "csvtojson": "^2.0.10",
     "nodemon": "^3.0.3"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2"
   }
 }
