--- a/package.json
+++ b/package.json
@@ -4,15 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon task3-3.js"
+    "start": "nodemon task3-3.js",
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "author": "Nemanja Kostovski",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.19",
+    "@types/supertest": "^6.0.2",
     "csvtojson": "^2.0.10",
-    "nodemon": "^3.0.3"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.3",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "express": "^4.18.2",
     "node-fetch": "^3.3.2"
   }
